fix: validation fields, button z-index, checkbox styles and params

--- a/src/pages/auth/FormRegister/FormRegister.module.scss
+++ b/src/pages/auth/FormRegister/FormRegister.module.scss
@@ -2,7 +2,7 @@
   --text-container-width: 14.5%; // 200px;
   --grid-column-gap: 61px;
   --input-side-padding: 12.5%; // 240px;
-  --input-min-height: 186px;
+  --input-min-height: 200px;
   --number-font-size: 128px;
 
   position: relative;
@@ -49,7 +49,7 @@
 
 .button {
   position: absolute;
-  z-index: 0;
+  z-index: 5;
   bottom: 300px;
   left: 50%;
   transform: translateX(-50%);
@@ -141,40 +141,6 @@
   @media screen and (width <= 690px) {
     --input-font-size: 32px;
     --input-font-size-min: 20px;
-  }
-}
-
-.textarea {
-  resize: none;
-
-  position: relative;
-
-  display: block;
-
-  min-height: 100%;
-  padding-top: 2%;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
-  &::placeholder {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-
-    @media screen and (width <= 1280px) {
-      padding-top: 0;
-    }
-
-    @media screen and (width <= 1060px) {
-      line-height: 64px;
-    }
-
-    @media screen and (width <= 690px) {
-      line-height: 52px;
-    }
   }
 }
 
@@ -343,19 +309,19 @@
 
 .checkboxLabel {
   box-sizing: border-box;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
 }
 
 .checkboxText {
   margin: 0;
   padding: 0;
 
-  font-family: 'GOST type B', sans-serif;
-  font-size: 32px;
-  font-weight: 400;
+  font-family: Germano, sans-serif;
+  font-size: 64px;
+  font-weight: 300;
   font-style: normal;
-  line-height: 1.18; // 38px;
+  line-height: 1.3; // magnification to better match the layout
   color: var(--dark-blue, #002d63);
 
   @media screen and (width <= 768px) {
@@ -369,10 +335,13 @@
   }
 }
 
-.checkboxTextConfidential {
+.checkboxTextPolicy {
   cursor: pointer;
+
   text-decoration-line: underline;
-  text-underline-offset: 5px;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 17px;
+
   transition: opacity 0.2s ease;
 
   &:hover {
@@ -383,12 +352,6 @@
     text-underline-offset: 3px;
   }
 }
-
-// .inputError + .textContainer {
-//   .textNumber {
-//     font-size: calc(var(--number-font-size) * 0.625);
-//   }
-// }
 
 .input:focus::placeholder {
   color: transparent;
